Make sure EomScrollView's adjustment values are always correctly set

Ensures one can only scroll as far as necessary. If one scrolled to far
the images's last line/column was used for padding.

Eog bug https://bugzilla.gnome.org/show_bug.cgi?id=631710
Based one eog commit b21dd56b9437e53b7ba8abdd96942c1871edc02c
From Felix Riemann <friemann@gnome.org>